# task-habit-api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: database.py  dependencies.py  main.py  models.py  schemas.py
app/api/: auth.py  habits.py  main.py  root.py  tasks.py
app/core/: config.py  security.py
app/routers/: habits.py  root.py
app/templates/: api_description.md  index.html  root.html
